feat: adding rerunning offline queries

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -31,6 +31,7 @@ Enhanced Chalk's diff viewer to show the entire file contents for added/removed 
 - Added support for aggregations over Vector types (sum, mean)
 - Usage data on the number of requests made to your pods can be exported from the Chalk Dashboard as a CSV
 - Pod metrics e.g. request count, etc. are now easily exportable from the Chalk Dashboard (as a CSV)
+- Re-running an offline query from the Chalk Dashboard auto-fills the input parameters with the previous values for easier experimentation
 
 ### Introduced an `approx_top_k` windowed aggregation
 
