fix: adding changelog image

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -25,12 +25,6 @@ Clicking on a log operator toggles it to negation to filter out logs e.g. from a
 
 Enhanced [Chalk's diff viewer](https://docs.chalk.ai/cli?command=diff) to show the entire file contents for added/removed files instead of just file names; helps track feature and resolver changes between deployments and branches.
 
-### Chalk developer experience improvements
-
-- Re-running an offline query from the Chalk Dashboard auto-fills the input parameters with the previous values for easier experimentation
-- Added support for aggregations over Vector types (sum, mean)
-- Pod metrics e.g. request count, etc. are now easily exportable from the Chalk Dashboard (as a CSV)
-
 ### Introduced an `approx_top_k` windowed aggregation
 
 Added a [new windowed aggregation](https://docs.chalk.ai/docs/aggregations#define-an-aggregation) (`approx_top_k`), for computing an approximation of the most common values in a field.
@@ -50,6 +44,16 @@ class User:
         ].approx_top_k(k=5)
     )
 ```
+
+### Chalk developer experience improvements
+
+- Re-running an offline query from the Chalk Dashboard auto-fills the input parameters with the previous values for easier experimentation
+- Added support for aggregations over Vector types (sum, mean)
+- Pod metrics e.g. request count, etc. are now easily exportable from the Chalk Dashboard (as a CSV)
+
+![Re-running Offline Queries](/img/changelog-2025_09_26-rerun-offline-query.png)
+
+---
 
 ## July 30, 2025
 
