--- a/backfilling-data.mdx
+++ b/backfilling-data.mdx
@@ -1,15 +1,47 @@
 ---
 title: Batch Backfilling
-description: Chalk makes it easy to batch ingest historical feature data from bulk data sources.
+description: Chalk makes it easy to batch ingest historical feature data from datasets and bulk data sources.
 published: true
 
 ---
 
 ---
 
-## Simple backfills from bulk sources
+## Backfilling from datasets
 
-When ingesting historical feature data from bulk data sources (such as a data warehouse or S3), you can override
+The most common way to backfill features is to ingest them from a dataset. This is useful when you have historical
+data ready or when you want to compute and backfill new features based on existing data.
+
+Run an offline query to obtain a [Dataset](/docs/datasets) of the feature values you want
+to ingest and then call [`.ingest`](/api-docs#DatasetRevision.ingest) to store online or offline:
+
+```py
+from chalk.client import ChalkClient
+
+# Query for historical data
+dataset = ChalkClient().offline_query(
+    input={
+        User.id: [i for i in range(1000)],
+    },
+    output=[
+        User.favorite_color,
+        User.purchase_count,
+        User.last_active
+    ],
+)
+
+# Ingest into the offline store for training
+dataset.ingest(store_offline=True)
+
+# Or ingest into the online store for serving
+# dataset.ingest(store_online=True)
+```
+
+---
+
+## Backfills from bulk sources
+
+When ingesting historical feature data from external bulk data sources (such as a data warehouse or S3), you can override
 [feature time](/docs/time) with timestamps from the data source. Chalk uses feature time to determine when a feature
 should be included in your [point-in-time queries](/docs/temporal-consistency) for consistency with production.
 
@@ -28,12 +60,12 @@ class User:
 Next, define a resolver to ingest data from your data source. Here's an example of a [SQL file resolver](/docs/sql) for
 ingesting data from Snowflake:
 
-```sql filename.chalk.sql
+```sql users.chalk.sql
 -- type: offline
--- resolves: user 
+-- resolves: User
 -- source: snowflake
 
-SELECT id, backfilled_feature, updated_at AS ts FROM source_table
+SELECT id, backfilled_feature, updated_at AS ts FROM users
 ```
 
 Chalk assumes your timestamp column is in UTC. You may return many values of `backfilled_feature` for the same `id`, but
@@ -49,7 +81,7 @@ chalk trigger --resolver your.module.path.ingest_historical_data
 You must manually trigger the resolver because it has no cron schedule specified.
 
 Once your resolver run completes, your data will be available in the offline store with effective times specified by the
-values returned for the `FeatureTime` (in this example, `updated_at` from `source_table`). If the feature [tolerates
+values returned for the `FeatureTime` (in this example, `updated_at` from `users`). If the feature [tolerates
 staleness](/docs/feature-caching) and `etl_offline_to_online=True`, then Chalk will also insert feature values into the
 online store if they are newer than existing values.
 
@@ -68,7 +100,7 @@ Chalk uses [offline queries](/docs/query-offline) to perform this operation. Sup
 
 ```py
 -- type: offline
--- resolves: user
+-- resolves: User
 -- source: snowflake
 -- cron: "0 * * * *"
 -- incremental:
