--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -101,7 +101,7 @@ class User:
   athleticism_score: float # computed feature
 ```
 
-We now use a python resolver to compute the `athleticism_socre` feature for our users.
+We now use a python resolver to compute the `athleticism_score` feature for our users.
 Python resolvers are useful for integrating existing libraries, and executing more complex
 logic, such as API calls.
 
