update gcp setup docs

--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -909,6 +909,21 @@ vpcaccess.locations.list
 vpcaccess.operations.get
 ```
 
+### Deploy Valkey
+
+To deploy valkey, Chalk requires the following provisioning permissions:
+```
+networkconnectivity.serviceConnectionPolicies.create
+networkconnectivity.serviceConnectionPolicies.delete
+networkconnectivity.serviceConnectionPolicies.get
+networkconnectivity.serviceConnectionPolicies.list
+networkconnectivity.serviceConnectionPolicies.update
+networkconnectivity.operations.cancel
+networkconnectivity.operations.delete
+networkconnectivity.operations.get
+networkconnectivity.operations.list
+```
+
 ### BigQuery Offline Storage
 
 For BigQuery offline storage, Chalk requires the following provisioning permissions:
