--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -911,7 +911,7 @@ vpcaccess.operations.get
 
 ### Deploy Valkey
 
-To deploy valkey, Chalk requires the following provisioning permissions:
+To deploy Valkey, Chalk requires the following provisioning permissions:
 ```
 networkconnectivity.serviceConnectionPolicies.create
 networkconnectivity.serviceConnectionPolicies.delete
