--- a/billing.mdx
+++ b/billing.mdx
@@ -19,14 +19,18 @@ Billing is based solely on the node’s active hours, not on how many features o
 
 ## Finding Chalk Credit Rates
 
-To see the full list of credit utilization rates per hour for all machine types, log into Chalk
-via your terminal and use the Chalk CLI command to view usage rates.
+You can see the full list of credit utilization rates per hour for all machine types in the Chalk
+dashboard under `Settings > Usage > Utilization Rates`.
+
+
+To view the full list of credit utilization rates in your terminal, log into Chalk in the
+terminal and use the Chalk CLI command to view usage rates.
 
 ```bash
 $ chalk login
 $ chalk usage rates
 ```
-
+cdc
 ## Cost Optimization Tips
 
 There are two primary ways to optimize your resource configurations for cost optimization.
