--- a/fraud-1.mdx
+++ b/fraud-1.mdx
@@ -2,7 +2,7 @@
 title: 'Tutorial: Fraud Detection on Chalk'
 metaTitle: 'Tutorial: Fraud Detection'
 description: Build a feature pipeline for fraud detection.
-published: true
+published: false
 ---
 
 ## Introduction
