--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -76,6 +76,9 @@ The following table lists the supported aggregations along with some notes.
 | `min` | |
 | `max` | |
 | `mean` | Feature type must be `float` or <code>float &#124; None</code>. `None` values are skipped, meaning they are not included in the mean calculation.  |
+| `min_by_n` | Returns a list of the `k` values for the minimum `by` values. |
+| `max_by_n` | Returns a list of the `k` values for the maximum `by` values. |
+| `approx_top_k` | Returns a list of the approximate top `k` non-null values. |
 |`count` | |
 |`std` | Standard deviation. Requires at least 2 values. |
 |`var` | Variance. Same requirements as `std`. |
@@ -104,6 +107,7 @@ class User:
         materialization={"bucket_duration": "1d"},
         expression=_.transactions[_.amount].sum(),
     )
+
 ```
 
 Materialized aggregations can also be applied to DataFrame features that are defined using a composite join key.
@@ -124,13 +128,27 @@ class Transaction:
 class User:
     id: int
     bank: str
-    transactions: DataFrame[Transaction] = has_many(lambda: (Transaction.user_id == User.id) & (Transaction.bank == User.bank)
+    transactions: DataFrame[Transaction] = has_many(lambda: (Transaction.user_id == User.id) & (Transaction.bank == User.bank))
     total_transaction_amount: Windowed[float] = windowed(
         "1d", "7d", "30d",
         # materialize your features in a single line
         materialization={"bucket_duration": "1d"},
         expression=_.transactions[_.amount].sum(),
     )
+
+    top_5_bank_amounts: Windowed[list[str]] = windowed(
+        "7d", "14d",
+        materialization={"bucket_duration": "1d"},
+        expression=_.transactions[_.bank].max_by_n(_.amount, 5),
+    )
+
+    lowest_5_bank_amounts: Windowed[list[str]] = windowed(
+        "7d", "14d",
+        materialization={"bucket_duration": "1d"},
+        expression=_.transactions[_.bank].min_by_n(_.amount, 5),
+    )
+
+
 ```
 
 ---
