--- a/ambiguous-resolvers.mdx
+++ b/ambiguous-resolvers.mdx
@@ -1,6 +1,6 @@
 ## Resolving Ambiguous Resolver Errors
 
-In standard operation, Chalk assumes that each [feature](FIXME) is un-ambiguously resolved by a single "in-scope" [resolver](FIXME). If this assumption
+In standard operation, Chalk assumes that each [feature](/docs/features) is un-ambiguously resolved by a single "in-scope" [resolver](/docs/resolver-overview). If this assumption
 is violated, Chalk's planner will raise an "ambiguous resolver" error that looks like --
 
 ```
