--- a/changelog.mdx
+++ b/changelog.mdx
@@ -6,6 +6,19 @@ description: Updates to Chalk!
 published: true
 ---
 
+
+## October 17, 2025
+
+### Environment Visibility
+
+Pods now display their **Kubernetes service account**, **namespace**, and **role ARN**.
+This makes deployment and debugging more transparent for engineers from within Chalk.
+
+Check the **pod view** in your Chalk environment to confirm service account mappings.
+Learn more about environment visibility in our [docs](https://docs.chalk.ai/docs/resource-configuration#kubernetes).
+
+![Kubernetes Service Accounts](/img/changelog-2025_10_17-service_accounts.png)
+
 ## October 14, 2025
 
 ### New Chalk expressions for retrieving the top and bottom N records
