update - no bold, changelog to 23

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,17 +7,17 @@ published: true
 ---
 
 
-## October 17, 2025
+## October 23, 2025
 
 ### Environment Visibility
 
-Pods now display their **Kubernetes service account**, **namespace**, and **role ARN**.
+Pods now display their Kubernetes service account, namespace, and role ARN.
 This makes deployment and debugging more transparent for engineers from within Chalk.
 
-Check the **pod view** in your Chalk environment to confirm service account mappings.
+Check the pod view in your Chalk environment to confirm service account mappings.
 Learn more about environment visibility in our [docs](https://docs.chalk.ai/docs/resource-configuration#kubernetes).
 
-![Kubernetes Service Accounts](/img/changelog-2025_10_17-service_accounts.png)
+![Kubernetes Service Accounts](/img/changelog-2025_10_23-service_accounts.png)
 
 ## October 14, 2025
 
